--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,19 @@
-.App {
-  text-align: center;
+.top_margin{
+  margin-top: 100px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.titale_color{
   color: white;
+  background-color: darkslategray;
 }
 
-.App-link {
-  color: #61dafb;
+.img_mobiles img{
+  height: 300px;
+  width: 360px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.img_11 img{
+  height: 500px;
+  width: 500px;
 }
